src/Calc.java
/* Generated By:JavaCC: Do not edit this line. Calc.java */
import java.util.Vector;
import java.io.*;
public class Calc implements CalcConstants {
    static Instrucao[] Prog;                // programa
    static TabSim Nomes  = new TabSim();    // nomes globais
    static TabSim Locais = null;            // nomes locais (ativada dentro de funcao)
    static Computador C  = new Computador();// Maquina virtual
    static int tam = 0;                     // tamanho do programa
    static Calc parser = null;

    public static void initParser(){
                if(parser == null){
                        parser = new Calc(System.in);
                }
        }

    public static String parse(String pathToProg, String pathToDefault){
                initParser();
                InputStream s = null;
                InputStreamReader isr = null;
                BufferedReader buffer = null;
                try{
                        s = new FileInputStream(pathToProg);
                        isr = new InputStreamReader(s);
                        buffer = new BufferedReader(isr);
                } catch(Exception e){
                        System.out.println("File not found. Using default.");
                        try{
                                s = new FileInputStream(pathToDefault);
                        }catch(Exception ex) {System.out.println("Erro fatal. Encerrando programa"); System.exit(1);}
                        isr = new InputStreamReader(s);
                        buffer = new BufferedReader(isr);
                }
                Calc.ReInit(buffer);
                try{
                        Prog = Calc.Programa();
                } catch(Exception parseEx){System.out.println("Erro na compilacao high-level."); System.exit(1);}
                return C.Dump(Prog);
        }

    public static void main(String args[]) throws ParseException {
        String s;
        initParser();
        Calc.ReInit(System.in);
        Prog = parser.Programa();          // compila e retorna o código de maquina
        s = C.Dump(Prog);                      // manda a string com codigo para s
        System.out.println(s); //imprime o codigo
//        System.out.println(((Real)C.Roda(Prog)).val()); // roda e mostra o resultado
    }

// Programa é o ponto de partida
  static final public Instrucao[] Programa() throws ParseException {
    Vector<Instrucao> p = new Vector<Instrucao>(0); // para retornar
    Vector<Instrucao> x = new Vector<Instrucao>(0); // trecho compilado
                                                    // por outras regras

    Instrucao[] a = new Instrucao[0];
    label_1:
    while (true) {
      if (jj_2_1(2)) {
        ;
      } else {
        break label_1;
      }
      x = Comando();
                    p.addAll(x); tam = p.size();
    }
    jj_consume_token(0);
        p.add(new RET());        // para garantir que tem um RET
        {if (true) return  p.toArray(a);}
    throw new Error("Missing return statement in function");
  }

  static final public Vector<Instrucao> Comando() throws ParseException {
    Vector<Instrucao> p = new Vector<Instrucao>(0);
    Vector<Instrucao> x = new Vector<Instrucao>(0);
    Token t;
    if (jj_2_3(2)) {
      x = Expressao();
      jj_consume_token(7);
                          p.addAll(x);
    } else if (jj_2_4(2)) {
      x = Condicional();
                          p.addAll(x);
    } else if (jj_2_5(2)) {
      x = Laco();
                          p.addAll(x);
    } else if (jj_2_6(2)) {
      x = Funcao();
         p.add(new GOTO(x.size()+1)); // pula a descricao da funcao
         p.addAll(x);
    } else if (jj_2_7(2)) {
      jj_consume_token(8);
      if (jj_2_2(2)) {
        x = Expressao();
                              p.addAll(x);
      } else {
        ;
      }
      jj_consume_token(7);
                                                   p.add(new RET());
    } else if (jj_2_8(2)) {
      jj_consume_token(9);
      x = ListPrint();
                            p.addAll(x);
      jj_consume_token(7);
    } else if (jj_2_9(2)) {
      jj_consume_token(10);
      jj_consume_token(7);
         p.add(new PUSH(new Cadeia("\u005cn")));
         p.add(new PRINT());
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
        {if (true) return p;}
    throw new Error("Missing return statement in function");
  }

// No nivel mais baixo calcula as expressoes lógicas
  static final public Vector<Instrucao> Expressao() throws ParseException {
    Vector<Instrucao> p = new Vector<Instrucao>(0);
    Vector<Instrucao> x = new Vector<Instrucao>(0);
    x = Arit();
                 p.addAll(x);
    label_2:
    while (true) {
      if (jj_2_10(2)) {
        ;
      } else {
        break label_2;
      }
      if (jj_2_11(2)) {
        jj_consume_token(11);
        x = Arit();
                      p.addAll(x); p.add(new MENORIGUAL());
      } else if (jj_2_12(2)) {
        jj_consume_token(12);
        x = Arit();
                      p.addAll(x); p.add(new MAIORIGUAL());
      } else if (jj_2_13(2)) {
        jj_consume_token(13);
        x = Arit();
                      p.addAll(x); p.add(new DIFERENTE());
      } else if (jj_2_14(2)) {
        jj_consume_token(14);
        x = Arit();
                      p.addAll(x); p.add(new IGUAL());
      } else if (jj_2_15(2)) {
        jj_consume_token(15);
        x = Arit();
                      p.addAll(x); p.add(new MENOR());
      } else if (jj_2_16(2)) {
        jj_consume_token(16);
        x = Arit();
                      p.addAll(x); p.add(new MAIOR());
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
         {if (true) return p;}
    throw new Error("Missing return statement in function");
  }

  static final public Vector<Instrucao> SysCall() throws ParseException {
    Vector<Instrucao> p = new Vector<Instrucao>(0);
    Vector<Instrucao> x = new Vector<Instrucao>(0);
    Token t;
    Token u;
    jj_consume_token(17);
    u = jj_consume_token(CHAMADA);
    if (jj_2_17(2)) {
      t = jj_consume_token(DIRECAO);
    } else if (jj_2_18(2)) {
      t = jj_consume_token(QUESTION);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
     p.add(SYSCALL.newSyscall(u.image, t.image));
    jj_consume_token(18);
         {if (true) return p;}
    throw new Error("Missing return statement in function");
  }

// Artiméticas
  static final public Vector<Instrucao> Arit() throws ParseException {
    Vector<Instrucao> p = new Vector<Instrucao>(0);
    Vector<Instrucao> x = new Vector<Instrucao>(0);
    x = Termo();
                  p.addAll(x);
    label_3:
    while (true) {
      if (jj_2_19(2)) {
        ;
      } else {
        break label_3;
      }
      if (jj_2_20(2)) {
        jj_consume_token(19);
        x = Termo();
                      p.addAll(x); p.add(new SOMA());
      } else if (jj_2_21(2)) {
        jj_consume_token(20);
        x = Termo();
                      p.addAll(x); p.add(new SUB());
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
         {if (true) return p;}
    throw new Error("Missing return statement in function");
  }

  static final public Vector<Instrucao> Termo() throws ParseException {
    Vector<Instrucao> p = new Vector<Instrucao>(0);
    Vector<Instrucao> x = new Vector<Instrucao>(0);
    x = Fator();
                  p.addAll(x);
    label_4:
    while (true) {
      if (jj_2_22(2)) {
        ;
      } else {
        break label_4;
      }
      if (jj_2_23(2)) {
        jj_consume_token(21);
        x = Fator();
                      p.addAll(x); p.add(new MULT());
      } else if (jj_2_24(2)) {
        jj_consume_token(22);
        x = Fator();
                      p.addAll(x); p.add(new DIV());
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
         {if (true) return p;}
    throw new Error("Missing return statement in function");
  }

  static final public Vector<Instrucao> Fator() throws ParseException {
    Vector<Instrucao> p = new Vector<Instrucao>(0);
    Vector<Instrucao> x = new Vector<Instrucao>(0);
    Token t;
    Simbolo v;
    if (jj_2_25(2)) {
      x = Chamada();
                                 // Chamada de funcao
        p.addAll(x);
        {if (true) return p;}
    } else if (jj_2_26(2)) {
      // Atribuicao
           t = jj_consume_token(ID);
      jj_consume_token(23);
      x = Expressao();
        p.addAll(x);
        p.add(new DUP());        // deixa uma cópia na pilha

        // Verifica se estamos dentro de uma funcao
        if ((Locais != null) && Locais.exists(t.image)) {
            v = Locais.get(t.image);
            p.add(new SETLV(v.pos));
         }
        else if (Nomes.exists(t.image)) { // existe como global?
            v = Nomes.get(t.image);
            if (v instanceof Variavel)
                p.add(new SETV(v.pos));
            else p.add(new PRINT()); // colocar erro de compilacao aqui
        }
        else {                    // cria local ou global, de acordo
            v = new Variavel();
            if (Locais != null) { // dentro de funcao -> local
                Locais.add(t.image,v);
                p.add(new SETLV(v.pos));
            }
            else {                // global
                Nomes.add(t.image,v);
                p.add(new SETV(v.pos));
            }
        }
        {if (true) return p;}
    } else if (jj_2_27(2)) {
      t = jj_consume_token(ID);
                                // variavel, tratamento similar ao de cima
        if ((Locais != null) && Locais.exists(t.image)) {
            v = Locais.get(t.image);
            p.add(new PUSHLV(v.pos));
         }
        else if (Nomes.exists(t.image)) {
            v = Nomes.get(t.image);
            if (v instanceof Variavel)
                p.add(new PUSHV(v.pos));
            else p.add(new PRINT()); // colocar erro de compilacao aqui
        }
         else {
             // Variavel nao inicializada
             v = new Variavel();
            p.add(new PUSH(new Real(0)));
            p.add(new DUP());
            if (Locais != null) {
                Locais.add(t.image,v);
                p.add(new SETLV(v.pos));
            }
            else {
                Nomes.add(t.image,v);
                p.add(new SETV(v.pos));
            }
         }
        {if (true) return p;}
    } else if (jj_2_28(2)) {
      t = jj_consume_token(NUM);
        p.add(new PUSH(new Real(Double.parseDouble(t.image))));
        {if (true) return p;}
    } else if (jj_2_29(2)) {
      jj_consume_token(24);
      x = Expressao();
      jj_consume_token(25);
        p.addAll(x);
        {if (true) return p;}
    } else if (jj_2_30(2)) {
      x = SysCall();
                   p.addAll(x); {if (true) return p;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public Vector<Instrucao> Condicional() throws ParseException {
    Vector<Instrucao> p = new Vector<Instrucao>(0);
    Vector<Instrucao> x = new Vector<Instrucao>(0);
    int delta, pos;
    if (jj_2_31(2)) {
      jj_consume_token(26);
    } else if (jj_2_32(2)) {
      jj_consume_token(27);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(24);
    x = Expressao();
                       p.addAll(x);
    jj_consume_token(25);
    if (jj_2_33(2)) {
      jj_consume_token(28);
    } else if (jj_2_34(2)) {
      jj_consume_token(29);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    x = Bloco();
        delta = x.size();
        pos = p.size(); // para arrumar no else, se preciso
        p.add(new ZERO(delta+1));
        p.addAll(x);
        //        return p;

    if (jj_2_37(2)) {
      if (jj_2_35(2)) {
        jj_consume_token(30);
      } else if (jj_2_36(2)) {
        jj_consume_token(31);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      x = Bloco();
         p.set(pos, new ZERO(delta+2)); // pula o GOTO
         delta = x.size();
         p.add(new GOTO(delta+1));
         p.addAll(x);
    } else {
      ;
    }
          {if (true) return p;}
    throw new Error("Missing return statement in function");
  }

  static final public Vector<Instrucao> Laco() throws ParseException {
    Vector<Instrucao> p = new Vector<Instrucao>(0);
    Vector<Instrucao> x = new Vector<Instrucao>(0);
    int exp, delta;
    if (jj_2_38(2)) {
      jj_consume_token(32);
    } else if (jj_2_39(2)) {
      jj_consume_token(33);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(24);
    x = Expressao();
        exp = x.size();
        p.addAll(x);
    jj_consume_token(25);
    if (jj_2_40(2)) {
      jj_consume_token(34);
    } else if (jj_2_41(2)) {
      jj_consume_token(35);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    x = Bloco();
        delta = x.size()+1;
        p.add(new ZERO(delta+1));
        p.addAll(x);
        p.add(new GOTO(-(delta+exp)));
        {if (true) return p;}
    throw new Error("Missing return statement in function");
  }

  static final public Vector<Instrucao> Bloco() throws ParseException {
    Vector<Instrucao> p = new Vector<Instrucao>(0);
    Vector<Instrucao> x = new Vector<Instrucao>(0);
    jj_consume_token(36);
    label_5:
    while (true) {
      if (jj_2_42(2)) {
        ;
      } else {
        break label_5;
      }
      x = Comando();
                        p.addAll(x);
    }
    jj_consume_token(37);
                                               {if (true) return p;}
    throw new Error("Missing return statement in function");
  }

// Definicao de funcao
  static final public Vector<Instrucao> Funcao() throws ParseException {
    Vector<Instrucao> p = new Vector<Instrucao>(0);
    Vector<Instrucao> x = new Vector<Instrucao>(0);
    Token t;
    Funcao v;
    String nome;
    TabSim Lorig;
    jj_consume_token(38);
    t = jj_consume_token(ID);
                                   // t.image contém o nome
        if (Nomes.exists(nome = t.image)) { // ja foi definida?
            v = (Funcao)Nomes.get(nome);
            // Isto NaO é um tratamento de erro decente!!!!!
            // Melhore
            p.add(new PUSH(new Cadeia("Nome ja usado:" + nome)));
            p.add(new PRINT());
        }
        else {                    // cria a funcao
            v = new Funcao(tam+1);
            Nomes.add(nome,v);
        }
        Lorig = Locais;         // guarda a tabela de simbolos locais
                                // (isso permite definicoes encaixadas,
                                // apesar do escopo de funcao ser
                                // global)
        Locais = v.Vars;
    jj_consume_token(24);
    if (jj_2_43(2)) {
      Args(nome,v);
    } else {
      ;
    }
    jj_consume_token(25);
    // lista de argumentos
        x = Bloco();
        p.addAll(x);
        p.add(new RET());       // garante RET
        Locais = Lorig;         // restaura tabela de simbolos
        {if (true) return p;}
    throw new Error("Missing return statement in function");
  }

// Argumentos
  static final public void Args(String fnom, Funcao v) throws ParseException {
    Arg(fnom,v);
    label_6:
    while (true) {
      if (jj_2_44(2)) {
        ;
      } else {
        break label_6;
      }
      jj_consume_token(39);
      Arg(fnom,v);
    }
  }

// Um argumento
  static final public void Arg(String fnom, Funcao f) throws ParseException {
    Token t;
    t = jj_consume_token(ID);
        if (!f.exists(t.image)){
            f.addarg(t.image);
        }
  }

// Chamada de funcao
  static final public Vector<Instrucao> Chamada() throws ParseException {
    Vector<Instrucao> p = new Vector<Instrucao>(0);
    Vector<Instrucao> x = new Vector<Instrucao>(0);
    Token t;
    Funcao f;
    Endereco e;
    String nome;
    TabSim Lorig;
    t = jj_consume_token(ID);
                                    // nome da funcao
        if (Nomes.exists(nome = t.image)) {
            f = (Funcao) Nomes.get(t.image);    // Aqui gera erro se nao for funcao
            e = f.pos;
        }
        else {
            e  = new Endereco(-1);  //MUITO ARRISCADO!!!! Colete os
                                    //pontos na tabela de simbolos e
                                    //corrija os pontos depois
            f = new Funcao(0);
            System.out.println("Erro no uso de "+nome);
        }
        Lorig = Locais;             // disponibiliza o nome dos argumentos
        Locais = f.Vars;
    jj_consume_token(24);
    x = ListParms(f);
                        p.addAll(x);
    jj_consume_token(25);
        p.add(new CALL(e));         // chama
        Locais = Lorig;             // restaura
        {if (true) return p;}
    throw new Error("Missing return statement in function");
  }

// Parâmetros
  static final public Vector<Instrucao> ListParms(Funcao f) throws ParseException {
    Vector<Instrucao> p = new Vector<Instrucao>(0);
    Vector<Instrucao> x = new Vector<Instrucao>(0);
    Token t;
    int n = 0;
    String pnom;
    Variavel v;
    x = Parm(f,n++);
                     p.addAll(x);
    label_7:
    while (true) {
      if (jj_2_45(2)) {
        ;
      } else {
        break label_7;
      }
      jj_consume_token(39);
      x = Parm(f,n++);
                      p.addAll(x);
    }
        p.add(new ENTRA());        // novo contexto
        // populando
        for (int i = n-1; i >=0 ; i--) {
            pnom = f.getarg(i);

            if (!Locais.exists(pnom)){
                // adiciona na tabela quando usada
                v = new Variavel();
                Locais.add(pnom,v);
            }
            v = (Variavel) Locais.get(pnom);

            p.add(new SETLV(v.pos));
        }
        {if (true) return p;}
    throw new Error("Missing return statement in function");
  }

// Um argumento
  static final public Vector<Instrucao> Parm(Funcao f, int n) throws ParseException {
    Vector<Instrucao> p = new Vector<Instrucao>(0);
    Vector<Instrucao> x = new Vector<Instrucao>(0);
    x = Expressao();
        p.addAll(x);
        {if (true) return p;}
    throw new Error("Missing return statement in function");
  }

// Lista para impressao
  static final public Vector<Instrucao> ListPrint() throws ParseException {
    Vector<Instrucao> p = new Vector<Instrucao>(0);
    Vector<Instrucao> x = new Vector<Instrucao>(0);
    x = ItemPrint();
        p.addAll(x);
    label_8:
    while (true) {
      if (jj_2_46(2)) {
        ;
      } else {
        break label_8;
      }
      jj_consume_token(39);
      x = ItemPrint();
         p.addAll(x);
    }
      {if (true) return p;}
    throw new Error("Missing return statement in function");
  }
